--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ nav{
     left: 0;
     z-index: 99;
 }
-.window_scrolled{
+.window-scrolled{
     background: var(--color-bg-2);
     border-bottom: 0.2rem solid var(--color-bg-3);
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.3);
@@ -114,4 +114,40 @@ nav{
 }
 .nav_socials a:hover{
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.4);
+}
+header {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    top: 0;
+    background: linear-gradient(var(--color-bg-3), var(--color-bg-1));
+    overflow: hidden;
+}
+.header_container{
+    display: grid;
+    grid-template-columns: 40% 50%;
+    gap: 10%;
+    margin-top: 10rem;
+    position: relative;
+}
+.header_image-bg{
+    background: var(--color-bg-4);
+    height: 22rem;
+    width: 16rem;
+    position: absolute;
+}
+.header_image-lg{
+    width: 29rem;
+    position: relative;
+    top: 1rem;
+    left: 1rem;
+    filter: saturate(0) brightness(0.3);
+}
+.header_image-sm{
+    width: 28rem;
+    height: 28rem;
+    overflow: hidden;
+    position: absolute;
+    left: 6rem;
+    top: 6rem;
 }
