--- a/main.css
+++ b/main.css
@@ -125,8 +125,8 @@ header {
 }
 .header_container{
     display: grid;
-    grid-template-columns: 40% 50%;
-    gap: 10%;
+    grid-template-columns: 43% 53%;
+    gap: 4%;
     margin-top: 10rem;
     position: relative;
 }
@@ -142,6 +142,7 @@ header {
     top: 1rem;
     left: 1rem;
     filter: saturate(0) brightness(0.3);
+    transition: var(--transition);
 }
 .header_image-sm{
     width: 28rem;
@@ -150,4 +151,38 @@ header {
     position: absolute;
     left: 6rem;
     top: 6rem;
+    transition: var(--transition);
+}
+.header_left:hover .header_image-sm{
+    opacity: 0;
+}
+.header_left:hover .header_image-lg{
+    filter: saturate(1) brightness(1);
+    border: 1rem solid var(--color-bg-4);
+    top: 0;
+    left: 0;
+}
+.header_head{
+    display: flex;
+    gap: 2rem;
+    align-items: flex-start;
+}
+.empty{
+    height: 3.5rem;
+    width: 18rem;
+    background: var(--color-bg-2);
+    border-radius: calc(3.5rem / 2);
+    margin-bottom: 3.5rem;
+    box-shadow: inset 0 1rem 1rem rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--color-bg-4);
+}
+.header_tag{
+    color: var(--color-primary-variant);
+}
+.header_right p{
+    margin-top: 2rem;
+    width: 85%;
+}
+.header_btn-md{
+    display: none;
 }
