--- a/main.css
+++ b/main.css
@@ -116,7 +116,7 @@ nav{
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.4);
 }
 header {
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     position: relative;
     top: 0;
@@ -244,8 +244,14 @@ header {
     height: 10rem;
     display: flex;
     justify-content: center;
+    animation: spinText 30s linear infinite;
 }
 .contact_btn p span{
     position: absolute;
     transform-origin: 0.3rem 5rem;
+}
+@keyframes spinText{
+    to{
+        transform: rotate(360deg);
+    }
 }
