--- a/main.css
+++ b/main.css
@@ -275,4 +275,48 @@ header {
 }
 .about_btn:hover{
     transform: translateY(-1rem);
+    color: var(--color-primary);
+}
+.about_image{
+    position: relative;
+}
+.about_image-bg{
+    width: 16rem;
+    height: 24rem;
+    position: absolute;
+    bottom: 0;
+    background: var(--color-bg-4);
+}
+.about_image-lg{
+    position: relative;
+    left: 1rem;
+    bottom: 1rem;
+    filter: saturate(0) brightness(0.3);
+    transition: 500ms ease;
+}
+.about_image-sm{
+    position: absolute;
+    top: 3rem;
+    left: 8rem;
+    height: 22rem;
+    width: 22rem;
+    overflow: hidden;
+    box-shadow: 2rem 2rem 2rem rgba(0, 0, 0, 0.2);
+    transition: 500ms ease;
+}
+.about_image:hover .about_image-sm{
+    opacity: 0;
+}
+.about_image:hover .about_image-lg{
+    filter: saturate(1) brightness(1);
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.2);
+    border: 1rem solid var(--color-bg-4);
+    left: 0;
+    bottom: 0;
+}
+.about_right{
+    margin-left: 5rem;
+}
+.about_right p{
+    margin: 0 4rem 1.5rem 0;
 }
