--- a/main.css
+++ b/main.css
@@ -438,3 +438,9 @@ footer{
     transform: translateY(-1rem);
     border-color: var(--color-primary);
 }
+.footer_links{
+    margin: 3rem 0 5rem;
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+}
