--- a/main.css
+++ b/main.css
@@ -30,12 +30,22 @@
     text-decoration: none;
     box-sizing: border-box;
 }
+::-webkit-scrollbar{
+    width: 0.5rem;
+    background: rgba(229, 165, 93, 0.2);
+}
+::-webkit-scrollbar-thumb{
+    width: 100%;
+    background: var(--color-primary-variant);
+    border-radius: 0.25rem;
+}
+
 html{
     scroll-behavior: smooth;
 }
 body{
     font-family: 'Montserrat', sans-serif;
-    background: var(--color-bg-3);
+    background: var(--color-bg-3) url(/assets/bg-texture.png);
     color: var(--color-light);
     line-height: 1.7;
 }
@@ -510,5 +520,177 @@ footer{
     }
     #nav_toggle-close{
         display: none;
+    }
+    header{
+        height: fit-content;
+        padding: 12rem 0 10rem;
+        display: grid;
+        place-items: center;
+    }
+    .header_image-bg, .header_image-sm{
+        display: none;
+    }
+    .header_container{
+        grid-template-columns: 40% 54%;
+        gap: 6%;
+        margin: 0;
+    }
+    .header_image-lg{
+        filter: saturate(1) brightness(1);
+        border: 1rem solid var(--color-bg-2);
+        overflow: hidden;
+        width: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 15rem 15rem 0 0;
+    }
+    .empty{
+        display: none;
+    }
+    .header_tag{
+        margin-bottom: 1rem;
+    }
+    .header_right p{
+        width: 100%;
+        margin-top: 1.5rem;
+    }
+    .header_frames, .contact_btn{
+        display: none;
+    }
+    .header_btn-md{
+        background: linear-gradient(135deg, var(--color-primary-variant), var(--color-primary-variant));
+        color: var(--color-bg-1);
+        margin-top: 2rem;
+        display: inline-block;
+        padding: 0.6rem 1.6rem;
+        font-weight: 600;
+        border-radius: 0.3rem;
+    }
+    .header_btn-md:hover{
+        color: var(--color-bg-1);
+    }
+
+    .about_container{
+        grid-template-columns: 40% 54%;
+        gap: 6%;
+    }
+    .about_image-bg, .about_image-sm{
+        display: none;
+    }
+    .about_image-lg{
+        left: 0;
+        top: 0;
+        filter: saturate(1) brightness(1);
+    }
+    .about_image:hover .about_image-lg{
+        border: none;
+    }
+    .about_right{
+        margin: 0;
+    }
+    .about_right p{
+        margin-bottom: 1rem;
+    }
+    #gallery{
+        margin-top: 8rem;
+    }
+    .gallery_container p{
+        width: 100%;
+        margin-top: 2rem;
+    }
+    .swiper-wrapper{
+        margin-top: 4rem;
+        height: fit-content;
+    }
+    .exhibitions_head > p{
+        width: 100%;
+        margin-top: 2rem;
+    }
+    .exhibitions_gallery{
+        margin-top: 3rem;
+        gap: 1rem;
+    }
+    .exhibitions_gallery article{
+        border: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    h1, h2{
+        font-size: 2rem;
+        line-height: 1.3;
+        color: var(--color-white);
+    }
+    .header{
+        padding: 0;
+        padding-bottom: 6rem;
+    }
+    .header_container{
+        grid-template-columns: 1fr;
+        gap: 1fr;
+        text-align: center;
+    }
+    .header_image-lg{
+        width: 80%;
+        height: 20rem;
+        margin: 0 auto;
+        margin-top: 7rem;
+        overflow: hidden;
+    }
+    .header_head{
+        justify-content: center;
+    }
+    .header_right p{
+        margin-top: 1rem;
+    }
+    .header_title{
+        margin-top: 1rem;
+    }
+    .about_container{
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+    .about_right p{
+        width: 100%;
+    }
+    .swiper-slide{
+        border: 0;
+    }
+    #gallery{
+        margin-top: 6rem;
+    }
+    .gallery_container p{
+        margin-top: 1rem;
+    }
+    .swiper-wrapper{
+        margin-top: 3rem;
+    }
+    #exhibitions {
+        margin-top: 6rem;
+    }
+    .exhibitions_head{
+        grid-template-columns: 1fr;
+    }
+    .exhibitions_head > p{
+        margin-top: 1rem;
+    }
+    .exhibitions_gallery{
+        display: block;
+    }
+    .exhibitions_gallery article{
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 1rem;
+    }
+    .footer_head{
+        flex-direction: column;
+    }
+    .footer_head h2{
+        font-size: 1.5rem;
+    }
+    .footer_links{
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 5rem;
     }
 }
